--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta name="viewport" content="width=, initial-scale=1.0">
    <title>Document</title>
    <link rel="stylesheet" href="style.css">
+   <link rel="icon" href="images/favcon.png">
 </head>
 <body>
    <div class="headerInner" id="header">
