--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=, initial-scale=1.0">
-   <title>Document</title>
+   <title>GCshooting</title>
    <link rel="stylesheet" href="style.css">
    <link rel="icon" href="images/favcon.png">
 </head>
